--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       FTP_HOST: ${FTP_HOST}
       FTP_USERNAME: ${FTP_USERNAME}
       FTP_PASSWORD: ${FTP_PASSWORD}
+      SCHEDULER_TIMEZONE: ${SCHEDULER_TIMEZONE}
 
 
 volumes:
