--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 POSTGRES_DB=db
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=
+POSTGRES_PASSWORD=password
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
 FTP_HOST=
 FTP_USERNAME=
 FTP_PASSWORD=
+SCHEDULER_TIMEZONE="Europe/Warsaw"
